manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "clockaks01-528d"
    labels:
        app: "clockaks01-528d"
spec:
    type: ClusterIP
    ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
    selector:
        app: "clockaks01-528d"
